# Niti

./: .env.example  .gitignore  README.md  pyproject.toml
config/: app_config_example.yaml  llm_config_example.yaml
data/crew/Generate Story/agents/: backlog_cartographer_agent.yaml  strategic_product_architect_agent.yaml
data/crew/Generate Story/tasks/: generate_detailed_user_story_task.yaml  generate_story_map_task.yaml
data/crew/context_leadership/agents/: context_architect_agent.yaml  product_owner_agent.yaml
data/crew/context_leadership/tasks/: analyze_project_context_task.yaml  generate_product_backlog_task.yaml
data/crew/estimation_architecture/agents/: technical_architect_agent.yaml  technical_lead_agent.yaml
data/crew/estimation_architecture/tasks/: apply_estimation_governance_task.yaml  design_system_architecture_task.yaml
data/crew/planning_capacity/agents/: project_manager_agent.yaml
data/crew/planning_capacity/tasks/: export_review_sheet_task.yaml  generate_sprint_plan_task.yaml
data/knowledge/example/: ai_tools_config.md  project_brd.md  team_profile.md  tech_standards.md
docs/: Performance Analytics & Retrospective Engine.md  Sprint Planning & Capacity Intelligence.md  The Integrated Estimation Engine.md  The Trello Manifestation & Automation Engine.md  The Virtual Leadership Suite.md
src/nikhil/niti/app/: main.py  publish_to_redmine.py  publish_to_trello.py
src/nikhil/niti/config/: application_type.py  execution_target.py  settings.py  task_config.py  utils_type.py
src/nikhil/niti/manager/: application_manager.py  bot_manager.py  (+2 more)
(+28 files in other folders)
